--- a/src/app/app-header/app-header.component.css
+++ b/src/app/app-header/app-header.component.css
@@ -1,65 +1,58 @@
 element.style {
   margin-top: 20px;
 }
-  
-  .sidenav-container {
-    background-color: transparent !important;
-  }
-  .sidenav-container.mat-drawer-opened {
-    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-       causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-       flex: 1;
-       top: 62px;
-       width: 250px;
-       height: calc(100% - 62px);
-       position: absolute;
-       box-shadow: 0px 5px 10px 5px #a4addc;
-  }
+.sidenav-container {
+  background-color: transparent !important;
+}
+.sidenav-container.mat-drawer-opened {
+  flex: 1;
+  top: 62px;
+  width: 250px;
+  height: calc(100% - 62px);
+  position: absolute;
+}
 
-  .sidenav-container a.mat-list-item{
-    color: #757575 !important;
-    font-weight: 500;
-  }
-  .sidenav-container a.mat-list-item:hover{
-    color: #1976d2 !important;
-    font-weight: 500;
-  }
-  .mat-drawer-backdrop.mat-drawer-shown  {
-    background-color: transparent !important;
-  }
+.sidenav-container a.mat-list-item{
+  color: #757575 !important;
+  font-weight: 500;
+}
+.sidenav-container a.mat-list-item:hover{
+  color: #1976d2 !important;
+  font-weight: 500;
+}
+.mat-drawer-backdrop.mat-drawer-shown  {
+  background-color: transparent !important;
+}
 
-  .sidenav-container .mat-drawer
-  {
-    width: 250px;
-    height: 100%;
-    position: absolute;
-  }
-  .sidenav-container .mat-drawer .mat-drawer-inner-container
-  {
-    top: 0px;
-    height: 100%;
-    padding: 5px;
-    position: absolute;
-  }
-
-  .title-panel {
-    width: calc(100% - 150px);
-    background: #1976d2 !important;
-  }
-
-  .user-panel {
-    position: absolute;
-    float: right;
-    top: 0;
-    right: 0;
-    padding: 5px;
-    width: 150px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-
-  .user-panel .user-icon {
-    position: relative;
-    top: 5px;
-    margin: 5px;
-  }
+.sidenav-container .mat-drawer
+{
+  width: 250px;
+  height: auto;
+  position: fixed;
+  bottom: 0;
+  top: 86px !important;
+  box-shadow: none !important;
+  border-right: 1px solid rgba(0,0,0,0.1) !important;
+  outline: 0;
+}
+.sidenav-container .mat-drawer > div,
+.mat-drawer-inner-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.user-panel {
+  padding: 10px 20px 15px;
+  background: #fbfbfb;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  border-top: 1px solid rgba(0,0,0,0.1);
+  color: #bbb;
+  margin-top: auto;
+}
+.mat-icon.small {
+  width: auto;
+  height: auto;
+  margin-right: 8px;
+  font-size: 1em;
+}
