--- a/src/app/view-all-transaction/view-all-transaction.component.html
+++ b/src/app/view-all-transaction/view-all-transaction.component.html
@@ -1,10 +1,13 @@
 <app-header [isUserLoggedIn]="isUserLoggedIn"></app-header>
 <br>
-<div class="container app-content-container">   
-  <div class="row page-title text-center">
-    <h3 class="page-title">View Transaction</h3>   
+<div class="container app-content-container">  
+  
+  <div class="inner-page-header">
+    <figure><img routerLink="/" src="assets\images\banner-view-transaction.jpg" alt="" /></figure>
+    <div class="hgroup">
+      <h3 class="page-title">View Transaction</h3>   
+    </div>
   </div>
-  <br>
   <!-- <form class="" [formGroup]="viewTransactionForm" (ngSubmit)="getAllData()">
     <div class="form-group row" appearance="fill">
       <div class="col-sm-12 text-center">
