--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 /*** Reset ***/
 html, body { background: #f8fcff; height: 100%; }
 html {font-size: 14px;}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding-top: 86px; }
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
@@ -34,17 +34,18 @@ img {
   max-width: 100%;
 }
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px #04b79e; 
 }
 ::-webkit-scrollbar-thumb {
-  background:#a0a0a0; 
+  background:#04b79e; 
   border-radius: 2px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #9a9a9a; 
+  background: #04b79e; 
 }
 ::-webkit-scrollbar {
   width: 5px;
+  height: 6px;
 }
 
 
@@ -63,7 +64,6 @@ img {
   flex-direction: column;
   align-items: center;
 }
-
 svg.material-icons {
   height: 24px;
   width: auto;
@@ -271,33 +271,52 @@ sup {
   height: inherit !important;
 }
 .app-content-container {
-  width: calc(100vw - 280px);
+  width: calc(100vw - 250px);
   margin-left: 250px !important;
+  max-width: none !important;
 }
 
 /*** Header ***/
 .main-header {
-  padding: 10px 20px;
   background: #fff;
   border-bottom: 1px solid rgba(0,0,0,0.15);
+  width: 100%;
+  padding: 10px 20px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1020;
 }
 h1.admp-title {
   color: #04b79e;
   font-size: 18px;
   letter-spacing: 0.025em;
 }
+.admp-title small {
+  display: block;
+  font-size: 0.9rem;
+}
 .col-logo {
   width: 130px;
 }
 
-
+/*** Login ***/
+.page.page-login {
+  min-height: calc(100vh - 86px);
+  background: url(./assets/images/adia-bg.jpg) center no-repeat;
+  background-size: cover;
+}
 .login-panel {
   padding: 30px 50px;
   width: 480px;
-  background: #fff;
-  margin: 80px auto;
-  box-shadow: 0 0 15px rgba(121, 230, 232,0.2), 0 0 0 1px rgba(0,0,0,0.075);
+  background: rgba(0,0,0,0.4);
+  margin: 0 auto;
+  box-shadow: 0 0 20px rgba(255,255,255,0.25);
   border-radius: 6px;
+  color: #fff;
+}
+.page-login .main-container {
+  padding: 80px 0;
 }
 .page-title {
   display: block !important;
@@ -305,6 +324,25 @@ h1.admp-title {
   font-size: 18px;
   letter-spacing: 0.025em;
   text-transform: uppercase;
+}
+.login-panel .page-title {
+  color: #fff;
+}
+.login-panel label.control-label {
+  color: rgba(255,255,255,0.6);
+}
+.login-panel span.mat-form-field-ripple {
+  background: #fff;
+}
+.login-panel .mat-form-field-appearance-legacy .mat-form-field-underline {
+  background: #fff;
+}
+.login-panel input.mat-input-element {
+  background: transparent !important;
+  color: #fff !important;
+}
+.mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: #04b79e;
 }
 .main-container .mat-form-field {
   display: block;
@@ -333,4 +371,61 @@ button.btn.btn-primary {
 .submit-block {
   text-align: right;
   margin-top: 15px;
+}
+
+/*** Sidebar ***/
+.mat-drawer-inner-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.mat-list-base .mat-list-item div.mat-list-item-content {
+  padding: 0;
+}
+.mat-list-base .mat-list-item div.mat-list-item-content a {
+  padding: 0 20px;
+  font-size: 14px;
+}
+
+/*** Input field ***/
+.mat-form-field-appearance-fill div.mat-form-field-flex {
+  background: none;
+}
+
+
+/*** Common ***/
+.admp-app {
+  overflow-x: hidden;
+}
+div.ag-header-cell {
+  background: #f5f5f5 !important;
+  font-size: 105%;
+}
+
+.inner-page-header {
+  position: relative;
+  margin: 10px auto;
+  max-width: 1082px;
+  padding: 0 15px;
+}
+.inner-page-header .hgroup {
+  position: absolute;
+  right: 45px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.inner-page-header h3.page-title {
+  color: #fff;
+  font-size: 1.8rem;
+  margin: 0;
+}
+.inner-page-header img {
+  max-height: 150px;
+  width: 100%;
+  object-fit: cover;
+}
+.app-content-container .container {
+  max-width: 1082px;
+  margin: 0 auto;
 }
