upto submit block

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,6 +1,6 @@
 <header class="main-header">
   <div class="header-wrapper d-flex justify-content-between align-items-center">
-    <div class="col-title"><h1 class="admp-title admp--welcome-title">Welcome to ADMP,<small>The NextGen Integration Layer</small></h1></div>
+    <div class="col-title"><h1 class="admp-title admp--welcome-title">Welcome to ADMP<small>The NextGen Integration Layer</small></h1></div>
     <div class="col-logo"><img routerLink="/" src="assets\images\adia-logo.jpg" alt="ADMP" /></div>
   </div>
 </header>
