--- a/src/app/view-all-transaction/view-all-transaction.component.html
+++ b/src/app/view-all-transaction/view-all-transaction.component.html
@@ -1,5 +1,5 @@
+<div class="page page-list-transactions">
 <app-header [isUserLoggedIn]="isUserLoggedIn"></app-header>
-<br>
 <div class="container app-content-container">  
   
   <div class="inner-page-header">
@@ -42,3 +42,4 @@
   </div>
 </div>
 
+</div> <!-- .page -->
