--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
     </div> -->
 
     <div class="login-panel text-center">
-      <h3 class="page-title">Welcome to ADMP,<br/><small>The NextGen Integration Layer</small></h3> 
+      <h3 class="page-title">Welcome to ADMP<br/><small>The NextGen Integration Layer</small></h3> 
       <form [formGroup]="loginForm" (ngSubmit)="login()">
           <div class="form-group row login-form-group">
             <div *ngIf="error !== undefined" class="mat-login-form-field error-panel text-center">
